<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#FFFFFF"
    tools:context="com.example.viewflipper.InstructionActivity" >

    <ViewFlipper android:id="@+id/vfInstruction"
    	android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="6dip" >            
        <!--  The child Views/Layout to flip -->
        
        <!--  Layout 1 for 1st Screen -->
        <LinearLayout
        	android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >
            
            <TextView android:id="@+id/txtInstruction1"
                android:layout_width="142dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="30dip"
                android:text="@string/charing_station_everywhere"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />
		</LinearLayout>
            
        <!--  Layout 2 for 2nd Screen -->   
        <LinearLayout
       		android:layout_width="fill_parent"
            android:layout_height="fill_parent"            
            android:orientation="vertical" >

            <TextView android:id="@+id/txtInstruction21"
                android:layout_width="142dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="30dip"
                android:text="@string/scan"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />
                                
            <TextView
                android:id="@+id/txtInstruction22"
                android:layout_width="142dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"                
                android:text="@string/at_the_counter"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:textColor="#888888" />
        </LinearLayout>
        
        <!--  Layout 3 for 3rd Screen -->   
        <LinearLayout
       		android:layout_width="fill_parent"
            android:layout_height="fill_parent"            
            android:orientation="vertical" >

             <TextView android:id="@+id/txtInstruction3"
                android:layout_width="142dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="30dip"
                android:text="@string/charge"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />               
        </LinearLayout>
	
	</ViewFlipper>

    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" >
        
        <ImageView android:id="@+id/imvInstructionPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dip"
            android:src="@drawable/ipage0"
            android:contentDescription="@string/app_name" />
        
        <Button android:id="@+id/btnGiveMeCharge"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:padding="15dip"
        	android:gravity="center"
            android:background="@drawable/btn_yellow"
        	android:textColor="#FFFFFF"
        	android:textStyle="bold"
        	android:textSize="32sp"
        	android:text="@string/give_me_charge" />
        
    </LinearLayout>
    
</RelativeLayout>
