<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#FFFFFF"
    tools:context=".QRCodeActivity" >

    <com.novelsys.juice.custom_view.CircularProgressBar
        android:id="@+id/battLevel"
        style="@style/Widget.ProgressBar.Holo.CircularProgressBar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <TextView
        android:id="@+id/txtCntDowmTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/battLevel"
        android:layout_marginTop="10dip"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:text="@string/count_down_timer" />
    
    <TextView
        android:id="@+id/txtChargingInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtCntDowmTimer"        
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceSmall"        
        android:text="@string/charging_info" />

    <ImageView
        android:id="@+id/imvUsbCable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"       
        android:src="@drawable/usb_cable"
        android:contentDescription="@string/power_connection_info" />

</RelativeLayout>